[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-packet"
version = "0.2.9"
description = "GCS Packet library"
requires-python = ">=3.8"
authors = [
    { name = "Aidan Sanders" },
    { name = "Joshua Ho" }
]
dependencies = [
  "python-dotenv==1.2.1"
]

[tool.setuptools.packages.find]
where = ["Packet"]